<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="app_name">CustomSettings</string>
    <string name="btn_apply">Salva</string>
    <string name="btn_format">Formatta</string>
    <string name="btn_info">Informazioni</string>
    <string name="btn_local_update">Locale</string>
    <string name="btn_polso_end">Fine: %1$s</string>
    <string name="btn_polso_start">Inizio: %1$s</string>
    <string name="btn_qr">QR CODE</string>
    <string name="btn_reboot">Riavvia</string>
    <string name="btn_system_info">Informazioni sul sistema</string>
    <string name="btn_task">task manager</string>
    <string name="btn_timepicker">Salva</string>
    <string name="btn_update">Aggiorna</string>
    <string name="cn">中文(简体)</string>
    <string name="en">English(US)</string>
    <string name="fw_error">"Errore nell'aggiornamento!"</string>
    <string name="fw_fail">Non trovo il file update.zip</string>
    <string name="it">Italiano(IT)</string>
    <string name="no_new_update">Nessuna nuova versione di AmazIT è stato trovata!</string>
    <string name="sw_allenamento">Allenamento</string>
    <string name="sw_applist">AppList</string>
    <string name="sw_battito">Battito</string>
    <string name="sw_bussola">Bussola</string>
    <string name="sw_celsius">Gradi °</string>
    <string name="sw_cronometro">Cronometro</string>
    <string name="sw_discobt">Notifica disconnessione BT</string>
    <string name="sw_giornata">Centro Dati</string>
    <string name="sw_km">Km</string>
    <string name="sw_meteo">Meteo</string>
    <string name="sw_mihome">Mi Home</string>
    <string name="sw_musica">Musica</string>
    <string name="sw_polso_on">Attiva</string>
    <string name="sw_sonno">Sonno</string>
    <string name="sw_sveglia">Sveglia</string>
    <string name="sw_timer">Timer</string>
    <string name="sw_unlock">Sblocca notifica</string>
    <string name="sw_vibrate">Vibra allo sbocco</string>
    <string name="sw_vibration">Vibrazione forte</string>
    <string name="sw_volume">Aumento volume BT</string>
    <string name="sw_wifi">Wifi</string>
    <string name="tbn_dpi">"Dimensione font:
%1$s"</string>
    <string name="tv_autore">Autore</string>
    <string name="tv_battito">Battito</string>
    <string name="tv_info">Informazioni</string>
    <string name="tv_language">Lingua:</string>
    <string name="tv_polso">Rotazione polso off</string>
    <string name="tv_polso2">Polso OFF</string>
    <string name="tv_scheduler">Pianificazione</string>
    <string name="tv_sito">Sito</string>
    <string name="tv_sponsor">by Nicola Sagliano</string>
    <string name="tv_system_title">Sistema</string>
    <string name="tv_title">AmazIT</string>
    <string name="tv_title2">Per applicare queste modifiche devi riavviare:</string>
    <string name="tv_update">Aggiornamento firmware (Il file update.zip deve essere nella sdcard)</string>
    <string name="tv_update_online">Online</string>
    <string name="tv_update_title">Aggiornamento</string>
    <string name="tv_versione">Versione</string>
    <string name="tv_widget">Widget</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
</resources>
