<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/system" android:background="@drawable/main_bg" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:weightSum="1.0">
        <TextView android:textSize="18.0sp" android:textColor="@android:color/white" android:id="@id/tv_title" android:layout_width="177.0dip" android:layout_height="wrap_content" android:text="@string/tv_widget" android:textAlignment="center" />
        <Space android:layout_width="fill_parent" android:layout_height="15.0dip" />
        <Switch android:textColor="@android:color/white" android:textColorLink="@android:color/white" android:id="@id/sw_meteo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:thumb="@drawable/health_all_heart_btn_on_thumb" android:text="@string/sw_meteo" android:track="@drawable/health_all_heart_btn_off" android:textAlignment="viewStart" />
        <Space android:layout_width="fill_parent" android:layout_height="10.0dip" />
        <Switch android:textColor="@android:color/white" android:textColorLink="@android:color/white" android:id="@id/sw_giornata" android:layout_width="fill_parent" android:layout_height="wrap_content" android:thumb="@drawable/health_all_heart_btn_on_thumb" android:text="@string/sw_giornata" android:track="@drawable/health_all_heart_btn_off" android:textAlignment="viewStart" />
        <Space android:layout_width="fill_parent" android:layout_height="10.0dip" />
        <Switch android:textColor="@android:color/white" android:textColorLink="@android:color/white" android:id="@id/sw_battito" android:layout_width="fill_parent" android:layout_height="wrap_content" android:thumb="@drawable/health_all_heart_btn_on_thumb" android:text="@string/sw_battito" android:track="@drawable/health_all_heart_btn_off" android:textAlignment="viewStart" />
        <Space android:layout_width="fill_parent" android:layout_height="10.0dip" />
        <Switch android:textColor="@android:color/white" android:textColorLink="@android:color/white" android:id="@id/sw_musica" android:layout_width="fill_parent" android:layout_height="wrap_content" android:thumb="@drawable/health_all_heart_btn_on_thumb" android:text="@string/sw_musica" android:track="@drawable/health_all_heart_btn_off" android:textAlignment="viewStart" />
        <Space android:layout_width="fill_parent" android:layout_height="10.0dip" />
        <Switch android:textColor="@android:color/white" android:textColorLink="@android:color/white" android:id="@id/sw_sveglia" android:layout_width="fill_parent" android:layout_height="wrap_content" android:thumb="@drawable/health_all_heart_btn_on_thumb" android:text="@string/sw_sveglia" android:track="@drawable/health_all_heart_btn_off" android:textAlignment="viewStart" />
        <Space android:layout_width="fill_parent" android:layout_height="10.0dip" />
        <Switch android:textColor="@android:color/white" android:textColorLink="@android:color/white" android:id="@id/sw_bussola" android:layout_width="fill_parent" android:layout_height="wrap_content" android:thumb="@drawable/health_all_heart_btn_on_thumb" android:text="@string/sw_bussola" android:track="@drawable/health_all_heart_btn_off" android:textAlignment="viewStart" />
        <Space android:layout_width="fill_parent" android:layout_height="10.0dip" />
        <Switch android:textColor="@android:color/white" android:textColorLink="@android:color/white" android:id="@id/sw_cronometro" android:layout_width="fill_parent" android:layout_height="wrap_content" android:thumb="@drawable/health_all_heart_btn_on_thumb" android:text="@string/sw_cronometro" android:track="@drawable/health_all_heart_btn_off" android:textAlignment="viewStart" />
        <Space android:layout_width="fill_parent" android:layout_height="10.0dip" />
        <Switch android:textColor="@android:color/white" android:textColorLink="@android:color/white" android:id="@id/sw_sonno" android:layout_width="fill_parent" android:layout_height="wrap_content" android:thumb="@drawable/health_all_heart_btn_on_thumb" android:text="@string/sw_sonno" android:track="@drawable/health_all_heart_btn_off" android:textAlignment="viewStart" />
        <Space android:layout_width="fill_parent" android:layout_height="10.0dip" />
        <Switch android:textColor="@android:color/white" android:textColorLink="@android:color/white" android:id="@id/sw_allenamento" android:layout_width="fill_parent" android:layout_height="wrap_content" android:thumb="@drawable/health_all_heart_btn_on_thumb" android:text="@string/sw_allenamento" android:track="@drawable/health_all_heart_btn_off" android:textAlignment="viewStart" />
        <Space android:layout_width="fill_parent" android:layout_height="10.0dip" />
        <Switch android:textColor="@android:color/white" android:textColorLink="@android:color/white" android:id="@id/sw_mihome" android:layout_width="fill_parent" android:layout_height="wrap_content" android:thumb="@drawable/health_all_heart_btn_on_thumb" android:text="@string/sw_mihome" android:track="@drawable/health_all_heart_btn_off" android:textAlignment="viewStart" />
        <Space android:layout_width="fill_parent" android:layout_height="10.0dip" />
        <Switch android:textColor="@android:color/white" android:textColorLink="@android:color/white" android:id="@id/sw_timer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:thumb="@drawable/health_all_heart_btn_on_thumb" android:text="@string/sw_timer" android:track="@drawable/health_all_heart_btn_off" android:textAlignment="viewStart" />
    </LinearLayout>
</ScrollView>