<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/system" android:background="@drawable/main_bg" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1.0">
        <TextView android:textSize="18.0sp" android:textColor="@android:color/white" android:id="@id/tv_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tv_system_title" android:textAlignment="center" />
        <Space android:layout_width="fill_parent" android:layout_height="15.0dip" />
        <TextView android:textColor="@android:color/white" android:id="@id/textView2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tv_language" android:textAlignment="center" />
        <Spinner android:textColor="@android:color/white" android:entries="@array/lang" android:id="@id/spinner" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent" android:textAlignment="center" />
        <Space android:layout_width="fill_parent" android:layout_height="15.0dip" />
        <Switch android:textColor="@android:color/white" android:textColorLink="@android:color/white" android:id="@id/sw_applist" android:layout_width="fill_parent" android:layout_height="wrap_content" android:thumb="@drawable/health_all_heart_btn_on_thumb" android:text="@string/sw_applist" android:track="@drawable/health_all_heart_btn_off" android:textAlignment="viewStart" />
        <Space android:layout_width="fill_parent" android:layout_height="10.0dip" />
        <Switch android:textColor="@android:color/white" android:textColorLink="@android:color/white" android:id="@id/sw_vibrate" android:layout_width="fill_parent" android:layout_height="wrap_content" android:thumb="@drawable/health_all_heart_btn_on_thumb" android:text="@string/sw_vibrate" android:track="@drawable/health_all_heart_btn_off" android:textAlignment="viewStart" />
        <Space android:layout_width="fill_parent" android:layout_height="10.0dip" />
        <Switch android:textColor="@android:color/white" android:textColorLink="@android:color/white" android:id="@id/sw_volume" android:layout_width="fill_parent" android:layout_height="wrap_content" android:thumb="@drawable/health_all_heart_btn_on_thumb" android:text="@string/sw_volume" android:track="@drawable/health_all_heart_btn_off" android:textAlignment="viewStart" />
        <Space android:layout_width="fill_parent" android:layout_height="10.0dip" />
        <Switch android:textColor="@android:color/white" android:textColorLink="@android:color/white" android:id="@id/sw_discobt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:thumb="@drawable/health_all_heart_btn_on_thumb" android:text="@string/sw_discobt" android:track="@drawable/health_all_heart_btn_off" android:textAlignment="viewStart" />
        <Space android:layout_width="fill_parent" android:layout_height="10.0dip" />
        <Switch android:textColor="@android:color/white" android:textColorLink="@android:color/white" android:id="@id/sw_km" android:layout_width="fill_parent" android:layout_height="wrap_content" android:thumb="@drawable/health_all_heart_btn_on_thumb" android:text="@string/sw_km" android:track="@drawable/health_all_heart_btn_off" android:textAlignment="viewStart" />
        <Space android:layout_width="fill_parent" android:layout_height="10.0dip" />
        <Button android:textSize="14.0sp" android:textColor="@android:color/background_light" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/tbn_dpi" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tbn_dpi" android:textAlignment="center" />
        <Space android:layout_width="fill_parent" android:layout_height="10.0dip" />
        <Button android:textSize="14.0sp" android:textColor="@android:color/background_light" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/btn_system_info" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/btn_system_info" android:textAlignment="center" />
        <Space android:layout_width="fill_parent" android:layout_height="30.0dip" />
    </LinearLayout>
</ScrollView>