<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/activity_main" android:background="@drawable/main_bg" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/tv_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tv_polso2" android:textAlignment="center" />
        <Space android:layout_width="fill_parent" android:layout_height="15.0dip" />
        <Switch android:textAppearance="@style/TextAppearance.AppCompat.Button" android:textSize="18.0sp" android:textColor="@android:color/white" android:textColorLink="@android:color/white" android:id="@id/sw_polso_on" android:layout_width="fill_parent" android:layout_height="wrap_content" android:thumb="@drawable/health_all_heart_btn_on_thumb" android:layout_column="0" android:text="@string/sw_polso_on" android:layout_alignParentTop="true" android:track="@drawable/health_all_heart_btn_off" android:layout_row="2" android:textAllCaps="false" android:textAlignment="center" android:layout_alignParentStart="true" />
        <Space android:layout_width="fill_parent" android:layout_height="10.0dip" />
        <Button android:textSize="18.0sp" android:textColor="@android:color/white" android:id="@id/btn_polso_start" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_column="0" android:text="@string/btn_polso_start" android:layout_alignParentBottom="true" android:layout_row="3" android:textAllCaps="false" android:layout_alignParentEnd="true" />
        <Space android:layout_width="fill_parent" android:layout_height="10.0dip" />
        <Button android:textSize="18.0sp" android:textColor="@android:color/white" android:id="@id/btn_polso_end" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_column="0" android:text="@string/btn_polso_end" android:layout_alignParentBottom="true" android:layout_row="3" android:textAllCaps="false" android:layout_alignParentEnd="true" />
    </LinearLayout>
</ScrollView>