<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/activity_main" android:background="@drawable/main_bg" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:weightSum="1.0">
        <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/tv_title" android:layout_width="183.0dip" android:layout_height="wrap_content" android:text="@string/tv_info" android:textAlignment="center" />
        <Space android:layout_width="fill_parent" android:layout_height="15.0dip" />
        <TextView android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/textView" android:paddingLeft="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tv_versione" android:textAlignment="viewStart" />
        <TextView android:textColor="@android:color/white" android:id="@id/tv_version" android:paddingLeft="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textAlignment="viewStart" />
        <Space android:layout_width="fill_parent" android:layout_height="10.0dip" />
        <TextView android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/textView5" android:paddingLeft="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tv_autore" android:textAlignment="viewStart" />
        <TextView android:textColor="@android:color/white" android:id="@id/tv_autore" android:paddingLeft="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textAlignment="viewStart" />
        <Space android:layout_width="fill_parent" android:layout_height="10.0dip" />
        <TextView android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/textView8" android:paddingLeft="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tv_sito" android:textAlignment="viewStart" />
        <TextView android:textColor="@android:color/white" android:id="@id/tv_sito" android:paddingLeft="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textAlignment="viewStart" />
    </LinearLayout>
</ScrollView>